--- a/app/src/main/res/layout/fragment_band.xml
+++ b/app/src/main/res/layout/fragment_band.xml
@@ -132,8 +132,13 @@
 
     </LinearLayout>
 
-    <View
+    <Button
+        android:id="@+id/bt_account_next"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/bg_gray"/>
+        android:layout_height="40dp"
+        android:layout_margin="15dp"
+        android:background="@drawable/bt_selected_fang"
+        android:text="提交"
+        android:textColor="@color/bg_white"
+        android:textSize="@dimen/tv_Normal"/>
 </LinearLayout>
