--- a/app/src/main/res/layout/fragment_home_top.xml
+++ b/app/src/main/res/layout/fragment_home_top.xml
@@ -37,6 +37,7 @@
         android:background="@color/colorLine"/>
 
     <RelativeLayout
+        android:id="@+id/rl_home_news"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:background="@color/bg_white"
