--- a/app/src/main/res/layout/activity_order_header.xml
+++ b/app/src/main/res/layout/activity_order_header.xml
@@ -5,14 +5,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/msg_toolbar"
     android:layout_width="match_parent"
-    android:layout_height="?android:actionBarSize"
+    android:layout_height="45dp"
     android:background="@color/colorPrimary"
     app:contentInsetLeft="0dp"
     app:contentInsetStart="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?android:actionBarSize"
+        android:layout_height="45dp"
         android:background="@color/bg_white"
         android:focusable="true"
         android:focusableInTouchMode="true"
