--- a/app/src/main/res/layout/fragment_orderservice_item_good.xml
+++ b/app/src/main/res/layout/fragment_orderservice_item_good.xml
@@ -32,7 +32,7 @@
             style="@style/LightTextView"
             android:layout_below="@id/tv_good_name"
             android:layout_marginLeft="5dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="5dp"
             android:layout_toRightOf="@id/iv_good_img"
             android:ellipsize="end"
             android:maxLines="1"
@@ -52,7 +52,7 @@
 
         <TextView
             android:id="@+id/tv_good_pice"
-            style="@style/LightTextView"
+            style="@style/NormalTextView"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:ellipsize="end"
