--- a/app/src/main/res/layout/view_header_tv_tv.xml
+++ b/app/src/main/res/layout/view_header_tv_tv.xml
@@ -6,7 +6,7 @@
     android:id="@+id/toolbar_tv"
     android:layout_width="match_parent"
     android:layout_height="45dp"
-    android:background="@color/colorPrimary"
+    android:background="@color/colorPrimaryDark"
     app:contentInsetLeft="0dp"
     app:contentInsetStart="0dp">
 
